--- a/src/main/resources/templates/member/salary-detail.html
+++ b/src/main/resources/templates/member/salary-detail.html
@@ -54,7 +54,7 @@
 	    						</li>
 	    						<li>
 	    							<label for="id">id=email -</label>
-	    							<span>[[${detail.id}]]</span>
+	    							<span>[[${detail.email}]]</span>
 	    							
 	    						</li>
 	    						<li>
