--- a/src/main/resources/templates/member/salary-list.html
+++ b/src/main/resources/templates/member/salary-list.html
@@ -32,7 +32,7 @@
 	    					</li>
 	    					<li>
 	    						<label>이메일 : </label>
-	    						<span>[[${dto.id}]]</span>
+	    						<span>[[${dto.email}]]</span>
 	    					</li>
 	    					<li>
 	    						<label>연락처 : </label>
