--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -45,7 +45,7 @@
 									<label for="name">전화번호   </label> <span>[[${detail.phone}]]</span>
 								</li>
 								<li>
-									<label for="name">ID (Email)   </label> <span>[[${detail.id}]]</span>
+									<label for="name">ID (Email)   </label> <span>[[${detail.email}]]</span>
 								</li>
 								<li>
 									<label for="name">직책   </label> <span>[[${detail.pname}]]</span>
