--- a/src/main/resources/templates/admin/departmentList/department_member-list.html
+++ b/src/main/resources/templates/admin/departmentList/department_member-list.html
@@ -24,7 +24,7 @@
 	    					</li>
 	    					<li>
 	    						<label>이메일 : </label>
-	    						<span>[[${dto.id}]]</span>
+	    						<span>[[${dto.email}]]</span>
 	    					</li>
 	    					<li>
 	    						<label>연락처 : </label>
