--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Insert title here</title>
+<meta charset="UTF-8">
+<title>로그인</title>
+<link rel="stylesheet" href="/css/member/login.css">
+<link rel="stylesheet" href="/css/member/loginplus.css">
 </head>
 <body>
-	<h1>기본페이지</h1>
-	<div class="wrap">
-		기본페이지
-		<a href="/login">로그아웃</a>
+	<div class="wrap view-size-m">
+		<section>
+			<div id="main_wrapper">
+				<div class="logo_box">
+			        <a href="/" class="logo_link">
+			        	<img src="image/logo/logo.png" alt="logo"/>
+			        </a>
+		        </div>
+		        <div>
+			        <a href="/login"><button>로그인</button></a>
+		        </div>
+			</div>
+		</section>
 	</div>
-
 </body>
 </html>
