--- a/src/main/resources/templates/admin/ggAdmin.html
+++ b/src/main/resources/templates/admin/ggAdmin.html
@@ -132,7 +132,7 @@
 				<li>
 					<form action="https://auth.worksmobile.com/oauth2/v2.0/authorize" method="get">
 						<input type="hidden" name="client_id" value="E7PDGFwvOh7UsDt2rWE9">
-						<input type="hidden" name="redirect_uri" value="http://localhost:8080/naver/auth2">
+						<input type="hidden" name="redirect_uri" value="http://ec2-3-39-97-4.ap-northeast-2.compute.amazonaws.com:8080/naver/auth2">
 						<input type="hidden" name="scope" value="directory,directory.read,orgunit,orgunit.read">
 						<input type="hidden" name="response_type" value="code">
 						<input type="hidden" name="state" value="test">
