네이버클라우드링크

--- a/src/main/resources/templates/admin/ManagerLayout.html
+++ b/src/main/resources/templates/admin/ManagerLayout.html
@@ -73,7 +73,7 @@
    			</ul>
    			<br>
    			<div style="text-align: center;">
-   				<a href="/adminlist">네이버 클라우드</a>
+   				<a href="https://greengames.ncpworkplace.com/authn/oauthLogin?response_type=code&client_id=VATI7DtQ5OVCR1YIKWy5&redirect_uri=https%3A%2F%2Fauth.worksmobile.com%2Fview%2Foauth%2Fsso%2Fauthorization%2F6PLV2NX3&worksId=greengames@greengames.by-works.com">네이버 클라우드</a>
    			</div>
    		</div>
    	</header>
